<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- MAP SETTINGS -->
    <PreferenceCategory
        android:title="Map Settings">

        <SwitchPreferenceCompat
            android:key="pref_map_rotation"
            android:title="@string/map_rotate_heading"
            android:summary="@string/map_rotate_summ"
            android:defaultValue="true" />

        <ListPreference
            android:key="pref_map_theme"
            android:title="@string/map_theme_heading"
            android:summary="@string/map_theme_summ"
            android:defaultValue="default"
            android:entries="@array/map_theme_options"
            android:entryValues="@array/map_theme_values" />
    </PreferenceCategory>

    <!-- AVATAR SETTINGS -->
    <PreferenceCategory
        android:title="Avatar Settings">

        <EditTextPreference
            android:key="pref_avatar_name"
            android:title="@string/avatar_name_heading"
            android:summary="@string/avatar_name_summ"
            android:defaultValue="You"
            android:inputType="text" />

        <ListPreference
            android:key="pref_avatar_size"
            android:title="@string/avatar_size_heading"
            android:summary="@string/avatar_size_summ"
            android:defaultValue="medium"
            android:entries="@array/avatar_size_options"
            android:entryValues="@array/avatar_size_values" />
    </PreferenceCategory>

    <!-- APP SETTINGS -->
    <PreferenceCategory
        android:title="App Settings">

        <Preference
            android:key="pref_language"
            android:title="@string/lang_heading"
            android:summary="@string/app_lang_btnsumm" />

        <Preference
            android:key="pref_logout"
            android:title="@string/logout_heading"
            android:summary="@string/logout_summ"
            app:titleTextColor="@android:color/holo_red_dark" />
    </PreferenceCategory>


</PreferenceScreen>